tests/parser/valid/dangling_else.src
fn main() {
    if (a)
        if (b)
            return 1;
        else
            return 2;
}
