tests/parser/invalid/invalid_assignment_target.src
fn main() {
    1 = x;
    foo() = 2;
}
